# Jarvis-API

./: README.md  pyproject.toml
app/: api.py  config.py  main.py  models.py  routes.py
app/agents/: assistant.py
app/controllers/: route_controller.py
app/dao/: route_dao.py
app/routes/: route_routes.py
app/services/: route_service.py  routes_service.py
data/: routes.json
jarvis_api/: INSTRUCOES_JARVIS.md  Instrucoes_GPT_Jarvis_Atualizado.txt  Jarvis_Projeto_Resumo.txt  MODELO_ROUTE_IMPORT.json  RESUMO_JARVIS_ATUALIZADO.txt
